Fix align

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h3 {
 	font-size: 20px;
 	margin-bottom: 0px;
 }
-header {
+#header {
 	margin-bottom: 32px;
 	text-align: center;
 }
